# uiautomation-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.cn.md  README.md  test_remote_ops.rs
crates/uiautomation/: Cargo.toml  README.md
crates/uiautomation/src/: actions.rs  clipboards.rs  conditions.rs  controls.rs  core.rs  dialogs.rs  errors.rs  events.rs  filters.rs  graphics.rs  inputs.rs  lib.rs  logs.rs  main.rs  patterns.rs  processes.rs  remote_operations.rs  types.rs  variants.rs
crates/uiautomation/src/events/: functions.rs  handlers.rs  mod.rs
crates/uiautomation_derive/: Cargo.toml  README.md
crates/uiautomation_derive/src/: action_derives.rs  control_derives.rs  enum_derives.rs  lib.rs  pattern_derivers.rs
samples/docker_container_test/: Cargo.toml
samples/docker_container_test/src/: main.rs
samples/docker_container_test_pure_rust/: Cargo.toml
samples/pure_remote_operations_test/: Cargo.toml
samples/pure_remote_operations_test/src/: main.rs
samples/test_real_remote_ops/: Cargo.toml
samples/test_real_remote_ops/src/: main.rs
samples/uia_async/: Cargo.toml
samples/uia_async/src/: main.rs
samples/uia_async_event/: Cargo.toml
samples/uia_async_event/src/: main.rs
samples/uia_cached_print/: Cargo.toml
samples/uia_cached_print/src/: main.rs
samples/uia_event_handler/: Cargo.toml
samples/uia_event_handler/src/: main.rs
samples/uia_notepad/: Cargo.toml
samples/uia_notepad/src/: main.rs
samples/uia_print/: Cargo.toml
samples/uia_print/src/: main.rs
samples/uia_remote_operations/: Cargo.toml
samples/uia_remote_operations/src/: main.rs
samples/uia_varaint/: Cargo.toml
samples/uia_varaint/src/: main.rs
samples/win_update/: Cargo.toml
samples/win_update/src/: main.rs
src/: conditions.rs  core.rs  errors.rs  lib.rs  main.rs  patterns.rs  types.rs  uiautomation.rs
tests/click_test/: Cargo.toml
tests/click_test/tests/: test.rs
tests/core_test/: Cargo.toml
tests/core_test/tests/: core_test.rs  input_test.rs  test.rs
tests/event_test/: Cargo.toml
tests/event_test/src/: lib.rs
tests/event_test/tests/: test.rs
tests/remote_operations_test/: Cargo.toml
tests/remote_operations_test/src/: lib.rs
tests/remote_operations_test/tests/: integration_tests.rs
