[package]
name = "uiautomation-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.28"
features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "UI_UIAutomation"
]