[package]
name = "uiautomation"
version = "0.13.4"
edition = "2021"
license = "Apache-2.0"
authors = ["Steven Lee <leexgone@163.com>"]
description = "UI Automation Framework for Windows"
repository = "https://github.com/leexgone/uiautomation-rs"
homepage = "https://github.com/leexgone"
readme = "../../README.md"
keywords = ["windows", "uiautomation", "rpa"]
categories = ["api-bindings", "os::windows-apis", "accessibility"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "aarch64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
]

[features]
log = ["dep:log"]

[dependencies]

chrono = "0.4.39"
# phf = { version = "0.11.2", features = ["macros"] }
log = { version = "0.4.22", optional = true }
uiautomation_derive = { version = "0.3.12", path = "../uiautomation_derive" }

[dependencies.windows-core]
version = "0.58.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Variant",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell_PropertiesSystem",
    "UI_UIAutomation",
    "implement",
]
