[package]
name = "uiautomation"
version = "0.20.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Steven Lee <leexgone@163.com>"]
description = "UI Automation Framework for Windows"
repository = "https://github.com/leexgone/uiautomation-rs"
homepage = "https://github.com/leexgone"
readme = "../../README.md"
keywords = ["windows", "uiautomation", "rpa"]
categories = ["api-bindings", "os::windows-apis", "accessibility"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "aarch64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
]
all-features = true

[features]
default = [ "input", "control" ]
all = [ "process", "dialog", "input", "pattern", "control", "event", "log" ]

process = [ "windows/Win32_System_Threading", "windows/Win32_Security", "windows/Win32_System_Diagnostics_ToolHelp" ]
dialog = [ "windows/Win32_UI_Input_KeyboardAndMouse", "windows/Win32_UI_WindowsAndMessaging" ]
input = [ "windows/Win32_UI_Input_KeyboardAndMouse", "arboard" ]
pattern = []
control = [ "pattern", "uiautomation_derive/action_derive", "uiautomation_derive/control_derive", "windows/Win32_UI_WindowsAndMessaging" ]
event = []

log = ["dep:log"]

[dependencies]

chrono = "0.4.41"
log = { version = "0.4.27", optional = true }
# arboard = "3.5.0"
uiautomation_derive = { version = "0.6.0", path = "../uiautomation_derive" }

[dependencies.windows-core]
version = "0.61.2"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_System_Variant",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    # "Win32_UI_Input_KeyboardAndMouse",
    # "Win32_UI_WindowsAndMessaging",
    # "Win32_System_Threading",
    # "Win32_Security",
    # "Win32_UI_Shell_PropertiesSystem",
    # "Win32_System_Diagnostics_ToolHelp",
    "UI_UIAutomation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
]

[dependencies.arboard]
version = "3.5.0"
default-features = false
features = []
optional = true