[package]
name = "uiautomation"
version = "0.21.4"
edition = "2024"
license = "Apache-2.0"
authors = ["Steven Lee <leexgone@163.com>"]
description = "UI Automation Framework for Windows"
repository = "https://github.com/leexgone/uiautomation-rs"
homepage = "https://github.com/leexgone"
readme = "../../README.md"
keywords = ["windows", "uiautomation", "rpa"]
categories = ["api-bindings", "os::windows-apis", "accessibility"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
all-features = true

[features]
default = [ "input", "control" ]
all = [ "process", "dialog", "input", "clipboard", "pattern", "control", "event", "log", "remote_operations" ]

process = [ "windows/Win32_System_Threading", "windows/Win32_Security", "windows/Win32_System_Diagnostics_ToolHelp" ]
dialog = [ "windows/Win32_UI_Input_KeyboardAndMouse", "windows/Win32_UI_WindowsAndMessaging" ]
input = [ "windows/Win32_UI_Input_KeyboardAndMouse" ]
clipboard = [ "windows/Win32_System_DataExchange", "windows/Win32_System_Memory"]
pattern = [ "uiautomation_derive/pattern_derive" ]
control = [ "pattern", "uiautomation_derive/action_derive", "uiautomation_derive/control_derive", "windows/Win32_UI_WindowsAndMessaging" ]
event = []
# Real Microsoft CoreAutomationRemoteOperation API via WinRT
# Available through Windows.UI.UIAutomation.Core namespace
remote_operations = [ "windows/UI_UIAutomation_Core" ]

log = ["dep:log"]

[dependencies]

chrono = "0.4.41"
log = { version = "0.4.27", optional = true }
uiautomation_derive = { version = "0.7.2", path = "../uiautomation_derive" }

[dependencies.windows-core]
version = "0.61.2"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_System_Variant",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "UI_UIAutomation",
]
