[package]
name = "uiautomation_derive"
version = "0.2.12"
edition = "2021"
license = "Apache-2.0"
authors = ["Steven Lee <leexgone@163.com>"]
description = "UI Automation Derive"
repository = "https://github.com/leexgone/uiautomation-rs"
homepage = "https://github.com/leexgone"
readme = "README.md"
categories = ["development-tools::procedural-macro-helpers", "os::windows-apis"]

[lib]
proc_macro = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
syn = { version = "2.0.29", features = ["full"] }
quote = "1.0.33"
proc-macro2 = "1.0.66"
