[package]
name = "uiautomation_derive"
version = "0.7.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Steven Lee <leexgone@163.com>"]
description = "UI Automation Derive"
repository = "https://github.com/leexgone/uiautomation-rs"
homepage = "https://github.com/leexgone"
readme = "README.md"
categories = ["development-tools::procedural-macro-helpers", "os::windows-apis"]

[lib]
proc-macro = true

[features]
default = [ "enum_derive" ]

enum_derive = []
action_derive = []
control_derive = []
pattern_derive = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
syn = { version = "2.0.102", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
