[package]
name = "docker_container_test"
version = "0.1.0"
edition = "2021"

[dependencies]
uiautomation = { path = "../../crates/uiautomation", features = ["remote_operations", "process"] }
windows = { version = "0.61", features = ["UI_UIAutomation_Core"] }
tokio = { version = "1.0", features = ["full"] } 