[package]
name = "uia_notepad"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uiautomation = { path = "../../crates/uiautomation", features = [ "log" ] }

# [dependencies.windows]
# version = "0.41.0"
# features = [
#     # "alloc",
#     "Win32_Foundation",
#     "Win32_System_Com",
#     "Win32_System_Ole",
#     "Win32_UI_Accessibility",
#     "UI_UIAutomation"
# ]