[package]
name = "uia_varaint"
version = "1.0.0"
edition = "2024"

[dependencies]

uiautomation = { path = "../../crates/uiautomation" }

# [dependencies.windows]
# version = "0.43.0"
# features = [
#     # "alloc",
#     "Win32_Foundation",
#     "Win32_System_Com",
#     "Win32_System_Ole",
#     "Win32_UI_Accessibility",
#     "UI_UIAutomation"
# ]