[package]
name = "core_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uiautomation = { path = "../../crates/uiautomation", features = ["process", "clipboard", "input"] }
windows = { version = "0.61.1", features = ["Win32_UI_WindowsAndMessaging"]}