[package]
name = "event_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uiautomation = { path = "../../crates/uiautomation" }
windows-core = "0.62.0"

[dependencies.windows]
version = "0.62.0"
features = [
    # "implement",
    "UI_UIAutomation",
    "Win32_UI_Accessibility",
]
